# flink

./: .gitignore  Makefile  README.md
.github/workflows/: ci.yml
client/: Makefile  compass.config.rb
client/src/app/: app.js
client/src/app/page/: footer.html  header.html
client/src/app/site/: index.html  login.html
client/src/app/ui/: browser.html  file-list.html  file.html  history.html  login.html
client/src/app/widgets/: icon-bubble.html
client/src/css/: _base.scss  style.scss
client/src/index/: index.html
server/: .envrc  Cargo.toml  Makefile  Rocket.toml
server/migrations/2019-08-02-221505_init/: down.sql  up.sql
server/src/: main.rs  site.rs
server/src/api/: mod.rs
server/src/api/app/: files.rs
server/src/api/authentication/: authentication.rs  mod.rs
server/src/db/: connection.rs  mod.rs  schema.rs
server/src/model/: mod.rs
server/src/model/app/: file.rs  mod.rs
server/src/model/user/: mod.rs  password.rs  session.rs  user.rs
server/src/util/: arg.rs  date.rs  download.rs  error.rs  mod.rs  multipart.rs  random.rs  sql.rs  upload.rs
