[package]
name = "flink"
version = "0.1.0"
authors = ["Felix Viernickel <f.viernickel@googlemail.com>"]
edition = "2018"

[dependencies]
argon2rs = "0.2.5"
base64 = "0.10.1"
chrono = { version = "0.4.7", features = ["serde"] }
diesel = { version = "1.4.2", features = ["sqlite", "r2d2", "chrono"] }
lazy_static = "1.0.0"
rand = "0.7.0"
rocket = "0.4.2"
rocket_contrib = "0.4.2"
multipart = "0.16.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
failure = "0.1.5"
clap = "2.33.0"
